// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders NoVisMessage when no visualization 1`] = `
<div>
  <p
    class="container"
  >
    <span
      class="icon"
    >
      <svg
        color="#e56408"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.847 2.794l.056.102 8.416 17.674a1 1 0 01-.786 1.423l-.117.007H3.584a1 1 0 01-.947-1.322l.044-.108 8.416-17.674a1 1 0 011.75-.102zM12 18a1 1 0 100 2 1 1 0 000-2zm1-9h-2v7h2z"
          fill="currentColor"
        />
      </svg>
    </span>
    <span
      class="message"
    >
      No data to display
    </span>
  </p>
</div>
`;

exports[`renders a DefaultPlugin when activeType is EVENT_CHART 1`] = `
<div>
  <div
    class="default-plugin"
  />
</div>
`;

exports[`renders a DefaultPlugin when activeType is EVENT_REPORT 1`] = `
<div>
  <div
    class="default-plugin"
  />
</div>
`;

exports[`renders a MapPlugin when activeType is MAP 1`] = `
<div>
  <div
    class="map-plugin"
  />
</div>
`;

exports[`renders a VisualizationPlugin for CHART 1`] = `
<div>
  <div
    class="visualization-plugin"
  />
</div>
`;

exports[`renders a VisualizationPlugin for REPORT_TABLE 1`] = `
<div>
  <div
    class="visualization-plugin"
  />
</div>
`;

exports[`renders active type MAP rather than original type REPORT_TABLE 1`] = `
<div>
  <div
    class="map-plugin"
  />
</div>
`;

exports[`renders active type REPORT_TABLE rather than original type MAP 1`] = `
<div>
  <div
    class="visualization-plugin"
  />
</div>
`;
